[package]
name = "paint_rl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = "abort"

[profile.bench]
lto = true
panic = "abort"
debug = 1

[lib]
name = "paint_gym"
path = "src/lib.rs"

[[bin]]
name = "copy_stroke"
path = "src/bin/copy_stroke.rs"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.4"

[dependencies]
minifb = "0.23"
rand = "0.8"
plotters = "0.3.0"
indicatif = "0.17"
pyo3 = "0.17"
tch = "0.10.1"